[package]
name = "nft-folder-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }

# Ethers' async features rely upon the Tokio async runtime.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
# Flexible concrete Error Reporting type built on std::error::Error with customizable Reports
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.11", features = ["json", "blocking"] }
base64 = "0.13.0"
