[package]
name = "nft-folder"
version = "0.3.5"
edition = "2021"
authors = ["ibro <sameoldlab@proton.me>"]
license = "MIT OR Apache-2.0"
description = "Save NFT collection to a local directory"
readme = "README.md"
repository = "https://github.com/sameoldlab/nft-folder-cli"
keywords = ["cli", "nft", "ethereum"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
base64 = "0.13.0"
console = {version = "0.15.8", features = ["ansi-parsing"]}
clap = {version = "4.5.2", features = ["derive"]}
eyre = "0.6.12"
futures = {version = "0.3.30" }
indicatif = {version = "0.17.8", features = ["futures", "tokio", ]}
reqwest = { version = "0.11", features = ["json", "blocking", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
tokio-util = { version = "0.7.10", features = ["io-util"] }
dirs = "5.0.1"
